--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ footer {
 
 .footer-title {
   font-size: 30px;
+  padding-top: 15px;
 }
 
 .f-second-title {
@@ -320,6 +321,7 @@ footer {
 
   main {
     margin: 50px auto 150px;
+    padding: 0 20px;
   }
   
   .shopList {
